fix menu overlapping layout bug

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -44,13 +44,12 @@ sf-navbar > a.sf-hamburger:hover {
   /* nav */
   sf-navbar > nav {
     top: 100%;
-    /* height: 0; */
+    height: 0;
     position: relative;
     display: block;
   }
   /* hamburger */
   sf-navbar > a.sf-hamburger {
     display: flex;
-    top: -100%;
   }
 }
